Wed Feb  6 12:29:18 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * dselect/method.cc: check fgetc() for EOF return so we don't spin
    if we can't read input

Sun Feb  3 22:21:08 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * po/fr.po: Updated

Sun Feb  3 20:44:20 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * po/pt_BR.po: Updated

Sun Feb  3 01:50:02 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * doc/reference.sgml: new file

Sat Feb  2 23:00:25 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * More imports from v1_9
  * debian/changelog: add changes from 1.9.18 and 1.9.19
  * debian/dpkg.conffiles: Mark /etc/alternatives/README as a conffile.
  * debian/control: Changed maintainer to debian-dpkg@lists and add Uploaders
  * main/processarc.c: Fix MD5Sum corruption when upgrading a package, and
    the width of the ASCII representation of the file system increased by
    one, thereby overwriting the start of the MD5Sum field.  This may also
    fix a segfault in certain cases.

Sat Feb  2 22:59:06 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * scripts/install-info.pl: Continue to read all data from a pipe, until
    EOF.  

Sat Feb  2 22:52:50 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-gencontrol: Make dpkg-gencontrol not warn about Uploaders.

Sat Feb  2 18:14:24 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * man/Makefile.in: add pt_BR to SUBDIRS
  * man/pt_BR/Makefile.in, man/pt_BR/update-alternatives.8,
    man/pt_BR/.cvsignore: new files

Sat Feb  2 16:47:41 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * Makefile.in: add man to subdirs
  * man/*: new directory with all manpages

Sat Feb  2 16:23:43 CET 2002 Adam Heath <doogie@debian.org>

  * po/da.po: Updated

Sat Feb  2 00:18:04 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * automake/dpkg.m4: add DPKG_CHECK_DEFINE
  * configure.in: test for TIOCNOTTY in sys/ioctl.h