@@ -79,6 +79,8 @@ dpkg (1.10) unstable; urgency=low
   * Use gzip -c in install-info. Closes: Bug#131758
   * start-stop-daemon works on HP-UX now. Closes: Bug#130130
   * Fix dselect spin when run without input. Closes: Bug#132476
+  * Update-alternatives correctly restored an alternative to auto mode
+    when removing a manually selected alternative. Closes: Bug#132632
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
