@@ -1,3 +1,9 @@
+Thu Feb  7 00:28:35 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/update-alternatives.pl: fix logic error, alternatives are
+    now correctly restored to auto when removing a manually selected
+    alternative
+
 Wed Feb  6 12:29:18 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/method.cc: check fgetc() for EOF return so we don't spin
